added rolling file appender; added restart script; enhanced jvm args (jmx, gc, etc)